[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/rooms/Room1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/rooms/Room2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/rooms/Room3.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]

[node name="Level" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Room1" parent="." index="0" instance=ExtResource( 2 )]

[node name="Room2" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 1450, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Room3" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 2900, 0 )

[node name="HUD" parent="." index="3" instance=ExtResource( 5 )]

[connection signal="room_over" from="Room1" to="." method="_on_Room1_room_over"]

[connection signal="room_over" from="Room2" to="." method="_on_Room2_room_over"]


